--- a/app/src/main/res/layout/productpage.xml
+++ b/app/src/main/res/layout/productpage.xml
@@ -37,7 +37,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
-
+<!--used card view for aesthetically-->
         <androidx.cardview.widget.CardView
             android:id="@+id/filtercard"
             android:layout_width="0dp"
@@ -102,7 +102,7 @@
                     android:layout_height="50dp"
                     app:srcCompat="@drawable/cross"
                     android:background="@color/white"
-                    android:layout_marginLeft="159dp"
+                    android:layout_marginLeft="135dp"
                     android:padding="0dp"
                     android:layout_marginTop="10dp"
                     android:scaleType="centerInside"
