--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -64,6 +64,7 @@
         android:layout_marginTop="0dp"
         android:text="Sign In"
         android:textSize="30sp"
+        android:textColor="@color/black"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,6 +79,7 @@
         android:layout_marginBottom="70dp"
         android:layout_marginRight="100dp"
         android:text="Don't have an account?"
+        android:textColor="@color/grey"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
