--- a/app/src/main/res/layout/activity_register_page.xml
+++ b/app/src/main/res/layout/activity_register_page.xml
@@ -15,6 +15,7 @@
         android:text="Sign Up"
         android:textSize="60sp"
         android:textStyle="bold"
+        android:textColor="@color/black"
         android:layout_marginBottom="350dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -25,18 +26,19 @@
         android:id="@+id/regusername"
         android:layout_width="wrap_content"
         android:layout_height="45dp"
+        android:layout_marginTop="48dp"
         android:background="@drawable/jason_customedittext"
-        android:ems="16"
-        android:inputType="text"
-        android:layout_marginTop="50dp"
-        android:hint="Username:"
         android:drawableStart="@drawable/person_logo"
         android:drawablePadding="5dp"
+        android:ems="16"
+        android:hint="Username:"
+        android:inputType="text"
         android:paddingStart="10dp"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_Registertitle"/>
+        app:layout_constraintTop_toBottomOf="@+id/tv_Registertitle" />
 
     <EditText
         android:id="@+id/regname"
@@ -108,6 +110,7 @@
         android:layout_marginBottom="70dp"
         android:layout_marginRight="100dp"
         android:text="Already have an Account?"
+        android:textColor="@color/grey"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
