--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="background">#f4efe9</color>
     <color name="green">#49583c</color>
     <color name="orange">#d5702b</color>
+    <color name="grey">#a9a9a9</color>
 </resources>
