--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,11 +1,12 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.MAD_P01_Team4" parent="Theme.Material3.DayNight.NoActionBar">
+    <style name="Base.Theme.MAD_P01_Team4" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your dark theme here. -->
         <item name="colorPrimary">@android:color/black</item>
         <item name="colorPrimaryVariant">@android:color/black</item>
         <item name="colorOnPrimary">@android:color/black</item>
         <item name="android:windowFullscreen">true</item>
+        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
 
