--- a/app/src/main/res/layout/productpage.xml
+++ b/app/src/main/res/layout/productpage.xml
@@ -201,10 +201,27 @@
             app:layout_constraintTop_toBottomOf="@id/displayfilter">
         </androidx.recyclerview.widget.RecyclerView>
 
+        <!-- Floating Chatbot Button -->
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/chatbot_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_margin="16dp"
+                android:src="@drawable/chatbotimage"
+                app:backgroundTint="@color/orange"
+                app:fabSize="normal" />
+        </FrameLayout>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
 
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
@@ -217,6 +234,4 @@
         android:id="@+id/navigationView"
         android:visibility="gone"/>
 
-
 </androidx.drawerlayout.widget.DrawerLayout>
-
