--- a/app/src/main/res/layout/custom_productlist.xml
+++ b/app/src/main/res/layout/custom_productlist.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:padding="0dp">
 
     <!-- This page is how the cardview will look like in product's page recyclerview -->
     <androidx.cardview.widget.CardView
-        android:layout_width="215dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         app:cardCornerRadius="10dp"
-        app:cardElevation="4dp"
-        >
+        app:cardElevation="4dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -94,4 +93,3 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
-
