--- a/app/src/main/res/layout/productpage.xml
+++ b/app/src/main/res/layout/productpage.xml
@@ -126,7 +126,7 @@
                         android:layout_marginEnd="10dp"
                         android:background="@drawable/search_button_desgin"
                         android:backgroundTint="@color/lightGray"
-                        android:hint="Search Pizza"
+                        android:hint="What would you like to eat?"
                         android:padding="8dp" />
 
                     <ImageButton
@@ -190,18 +190,65 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-
-        <!-- RecyclerView for displaying products -->
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/productrecyclerView"
+        <!-- RecyclerView for displaying all products -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/clallproduct"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="20dp"
-            android:background="@color/background"
-            android:paddingTop="30dp"
-            android:padding="10dp"
-            app:layout_constraintTop_toBottomOf="@id/displayfilter">
-        </androidx.recyclerview.widget.RecyclerView>
+            app:layout_constraintTop_toBottomOf="@id/displayfilter"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <LinearLayout
+                android:id="@+id/allproductslayout"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingTop="20dp"
+                android:paddingLeft="16dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent">
+
+                <TextView
+                    android:id="@+id/tvproduct"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="All Items"
+                    android:textStyle="bold"
+                    android:textSize="24sp"
+                    android:textColor="@color/black"/>
+
+                <Button
+                    android:id="@+id/viewallbutton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="View All"
+                    android:background="@android:color/transparent"
+                    android:textColor="@color/grey"
+                    android:layout_marginLeft="220dp"
+                    android:textAllCaps="false"
+                    android:padding="0dp"
+                    android:minWidth="0dp"
+                    android:minHeight="0dp"
+                    android:layout_gravity="center_vertical"
+                    />
+
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/productrecyclerView"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                android:background="@color/background"
+                android:padding="10dp"
+                app:layout_constraintTop_toBottomOf="@id/allproductslayout"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
         <!-- Floating Chatbot Button -->
         <FrameLayout
